# bulk-converter

./: CMakeLists.txt  README.md  main.cpp  main.py  requirements.txt
inc/: Converter.hpp  MultilinePrinter.hpp
modules/: Converter.py  MultilineOutputManager.py
src/: Converter.cpp  MultilinePrinter.cpp
